--- a/frontend/src/Css/PublicProfile.css
+++ b/frontend/src/Css/PublicProfile.css
@@ -13,7 +13,8 @@
 
 .PublicProfiletopdiv {
   width: 100%;
-  height: 20%;
+  min-height: 20%;
+  max-height: 30%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -32,7 +33,7 @@
   justify-content: space-around;
   align-items: center;
   height: 10%;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .PublicProfilemiddiv > button {
@@ -60,7 +61,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  border: 2px solid green;
+  /* border: 2px solid green; */
 }
 
 .PublicProfiledowndiv > p {
@@ -181,4 +182,18 @@
   align-self: center;
   font-size: large;
   cursor: pointer;
+}
+
+
+/* Add Contact Button */
+.add-contact-button {
+  background-color: transparent;
+  color: white;
+  border: none;
+  cursor: pointer;
+
+}
+
+.add-contact-button:hover {
+  color: #218838;
 }
