--- a/frontend/src/Css/Fetchchatlist.css
+++ b/frontend/src/Css/Fetchchatlist.css
@@ -19,6 +19,14 @@
   -ms-overflow-style: none;
 }
 
+/* Responsive for Mobile Screens */
+@media (max-width: 768px) {
+  .Chatappleftdiv {
+    width: 100%;
+    height: 100vh;
+  }
+}
+
 .Searchuserinput {
   width: 100%;
   height: 13%;
@@ -35,6 +43,10 @@
   display: flex;
   justify-content: left;
   align-items: center;
+}
+.baricon{
+  font-size: 2vw;
+  cursor: pointer;
 }
 
 .Searchuserinput > input {
@@ -54,6 +66,19 @@
   -ms-overflow-style: none;
 }
 
+/* Make sure the list covers full screen on mobile */
+@media (max-width: 768px) {
+  .Searchusers {
+    height: calc(100vh - 13%);
+  }
+  .baricon{
+     font-size: 6vw;
+     padding: 1vw;
+
+  }
+}
+
+
 .Otherusers {
   width: 100%;
   min-height: 88%;
@@ -65,6 +90,13 @@
   scrollbar-width: none;
   -ms-overflow-style: none;
   padding-top: 2vh;
+}
+
+/* Full height for mobile */
+@media (max-width: 768px) {
+  .Otherusers {
+    min-height: calc(100vh - 13%);
+  }
 }
 
 .Filteredusermaindiv {
