--- a/frontend/src/Css/Fetchmessages.css
+++ b/frontend/src/Css/Fetchmessages.css
@@ -6,6 +6,12 @@
   justify-content: flex-start;
   align-items: center;
 }
+@media (max-width: 768px) {
+    .Chatapprightdiv{
+      width: 100%;
+      height: 100vh;
+    }
+}
 
 .Chatapprightdivtopdiv {
   height: 7%;
@@ -15,6 +21,7 @@
   align-items: center;
 }
 
+
 .Chatapprightdivtopdiv > img {
   width: 3%;
   aspect-ratio: 1;
@@ -22,6 +29,17 @@
   margin-left: 2%;
   margin-right: 2%;
   cursor: pointer;
+}
+@media (max-width: 768px) {
+  .Chatapprightdivtopdiv {
+  background-color:#325ca8;
+}
+   .Chatapprightdivtopdiv>img{
+    width: 10%;
+   }
+   .Chatapprightdivtopdiv>h2{
+    color: white;
+   }
 }
 
 .Chatapprightdivdowndiv {
@@ -51,6 +69,7 @@
   background-color: rgb(45, 44, 44);
   padding: 0 10px;
 }
+
 
 .Attachfile {
   width: 5%;
@@ -85,7 +104,11 @@
   font-size: 1.5rem;
   color: #fff;
 }
-
+@media(max-width:768px){
+  .Attachfile{
+    font-size: 1rem;
+  }
+}
 .loader-container {
   width: 100%;
   height: 100%;
