--- a/frontend/src/Css/Chatapp.css
+++ b/frontend/src/Css/Chatapp.css
@@ -1,5 +1,5 @@
 .Chatappmaindiv {
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   position: relative;
   width: 100vw;
   height: 100vh;
