--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(0, 0, 0, 0.87);
-  background-color: #101010;
+  background-color: #f0e8e8;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
