--- a/frontend/src/Css/Message.css
+++ b/frontend/src/Css/Message.css
@@ -1,4 +1,4 @@
-
+/* src/Css/Message.css */
 .message {
   width: 30%;
   display: flex;
@@ -7,22 +7,21 @@
 }
 
 @media (max-width: 768px) {
-    .message{
-      width: 70%;
-      margin-top: 4vh;
-      
-    }
-    .sent{
-      flex-direction: row-reverse;
-    }
+  .message {
+    width: 70%;
+    margin-top: 4vh;
+  }
+  .sent {
+    flex-direction: row-reverse;
+  }
 }
+
 .sent {
   background-color: transparent;
   align-self: flex-end;
   margin-right: 1vw;
   text-align: center;
   margin-left: auto;
-  
 }
 
 .received {
@@ -96,13 +95,43 @@
   width: 100%;
   text-align: left;
   color: black;
+  margin: 0; /* Remove default margin */
+  padding-bottom: 5px; /* Add some space before footer */
+}
+
+/* New footer container for timestamp and ticks */
+.message-footer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  gap: 5px; /* Space between timestamp and ticks */
 }
 
 .message-timestamp {
-  align-self: flex-end;
-  margin-left: auto;
+  font-size: 12px;
+  color: #666;
 }
 
+.message-status {
+  display: flex;
+  align-items: center;
+}
+
+.tick {
+  font-size: 12px;
+}
+
+.single-tick {
+  color: #666; /* Grey for sent only */
+}
+
+.double-tick {
+  position: relative;
+  right: 10px;
+  top: 5px;
+  color: grey;
+}
 
 .document-preview {
   width: 150px;
