--- a/frontend/src/Css/Message.css
+++ b/frontend/src/Css/Message.css
@@ -4,6 +4,8 @@
   display: flex;
   justify-content: space-between;
   margin-top: 3vh;
+   background: rgba(255, 255, 255, 0.95);
+  /* background-image: linear-gradient(135deg, rgba(74, 22, 171, 0.05) 0%, rgba(255, 255, 255, 1) 100%); */
 }
 
 @media (max-width: 768px) {
@@ -42,6 +44,8 @@
   aspect-ratio: 1;
   border-radius: 100%;
   object-fit: cover;
+  
+  /* border: 2px solid red; */
 }
 
 .messagesdiv {
