--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,3 +27,8 @@ body, html {
 .main-container {
   height: calc(var(--vh, 1vh) * 100);
 }
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+  box-shadow: 0 0 0px 1000px white inset !important;
+  -webkit-text-fill-color: black !important;
+}
